# rootbench

./: .gitignore  .travis.yml  CMakeLists.txt  CTestCustom.cmake  README.md  RooFitUnBinnedBenchmarks.cxx  pytest.ini  requirements-deps.txt  requirements.txt
.github/workflows/: ci.yaml  rebase.yaml
.travis/: configure.sh  rootgcno.sh
.travis/lcov/: lcov-info-part1.sh  lcov-info-part2.sh  lcov-part1.sh  lcov-part2.sh
cmake/: FindONNXRuntime.cmake
cmake/modules/: AddRootBench.cmake  FindLWTNN.cmake  FindONNXRuntime.cmake  FindPythonModule.cmake  FlameGraph.cmake  GoogleBenchmark.cmake  PytestBenchmark.cmake  RootBenchCTest.cmake  RootBenchDataFiles.cmake  RootBenchOptions.cmake
event/: CMakeLists.txt  Event.cxx  Event.h
include/: CMakeLists.txt
include/rootbench/: Constants.h.in  ErrorHandling.h  MemoryMeasurement.h  RBConfig.h
lib/: CMakeLists.txt  ErrorHandling.cxx  MemoryMeasurement.cxx
lib/Instrumentation/: CMakeLists.txt  Memory.c
lib/Support/: CMakeLists.txt  ErrorHandling.cxx  MemoryManager.cxx
root/: CMakeCPackOptions.cmake  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.html  ROOTConfig-targets.cmake  ROOTConfig-version.cmake  ROOTConfig.cmake  cmake_install.cmake  install_manifest.txt  recmake_replay.sh
root/bindings/: CTestTestfile.cmake  Makefile  cmake_install.cmake
root/config/: Makefile.config
root/core/: CTestTestfile.cmake  Makefile  cmake_install.cmake
root/etc/: gitinfo.txt  system.rootrc
root/geom/: CTestTestfile.cmake  Makefile  cmake_install.cmake
root/ginclude/: RConfigOptions.h  RConfigure.h  TApplicationCommandLineOptionsHelp.h  compiledata.h  haddCommandLineOptionsHelp.h  hist2workspaceCommandLineOptionsHelp.h  rootCommandLineOptionsHelp.h  rootclingCommandLineOptionsHelp.h
root/graf2d/: CTestTestfile.cmake  Makefile  cmake_install.cmake
root/graf3d/: CTestTestfile.cmake  (+2 more)
root/tmva/sofie/: CMakeLists.txt  CTestTestfile.cmake  Conv_d100_L14_B32.onnx  EmitFromONNX.cxx  LWTNNInference.cxx  Makefile  ONNXRuntimeInference.cxx  ONNXRuntimeInference.cxx.in  ONNXRuntimeInference_Template.cxx.in  RDF_ONNXRuntime_Inference.cxx  RDF_SOFIE_Inference.cxx  RDF_lwtnn_Inference.cxx  SOFIEInference.cxx  SOFIEInferenceProfiler.cxx  SOFIEInference_Reader.cxx  SOFIEInference_Template.cxx.in  cmake_install.cmake
root/tmva/sofie/input_models/: Conv2DTranspose_Relu_Sigmoid.onnx  Conv3d_d32_L4_B1.onnx  ConvTModel_G4.onnx  ConvTrans2dModel_B1.onnx  Conv_d100_L14_B1.onnx  Conv_d100_L1_B1.onnx  DDB_B1.onnx  GRU_d10_L20_h8_B1.onnx  LSTM_d10_L20_h8_B1.onnx  Linear_event.onnx  RNN_d10_L20_h8_B1.onnx  SimpleNN_Alice.onnx  higgs_model_dense.json  higgs_model_dense.onnx  highlo_rnn_model.onnx
root/tmva/sofie/input_models/compiled/: Conv_d100_L14_B1.hxx  Conv_d100_L14_B32.hxx  Conv_d100_L1_B1.hxx  Linear_16.hxx  Linear_16_prof.hxx  Linear_32.hxx  Linear_32_prof.hxx  Linear_64.hxx  Linear_64_prof.hxx  Linear_event.hxx  higgs_model_dense.hxx  resnet18v1.hxx
root/tree/dataframe/: CMakeLists.txt  CTestTestfile.cmake  Makefile  RDataFrameBench.h  RDataFrameBenchmarks.cxx  RDataFrameOpenDataBenchmarks.cxx  RDataFrameSumBenchmarks.cxx  RDataFrame_vs_Tree.cxx  RDataFrameh1Analysis.cxx  RNTupleDSBenchmarks.cxx  cmake_install.cmake  df102_NanoAODDimuonAnalysis.C  df102_NanoAODDimuonAnalysis.py  df103_NanoAODHiggsAnalysis.C  df103_NanoAODHiggsAnalysis.py  df104_HiggsToTwoPhotons.py  pytest_rdataframe.py  rdataframe_asnumpy.py  zpeak.cxx
root/tree/dataframe/LoopSUSYFrame/: CMakeLists.txt  README
root/tree/dataframe/LoopSUSYFrame/data/: FNPFF.xml  biases.txt  fake_factor3D.xml  fake_factors_Stop2L.root  norm.txt  weights.txt
root/tree/dataframe/LoopSUSYFrame/inc/LoopSUSYFrame/: GenericHelpers.h  LeptonHelpers.h  LoopSUSYFrame.h  LoopSUSYTZTZ.h  LoopSUSYThTh.h  MCT2.h  MCT2_ROOT.h  MT2.h  MT2_ROOT.h  PostProcesser.h  RestFramesHelper.h  SystematicAliases.h  cppnn.h  readFFXML.h
root/tree/dataframe/LoopSUSYFrame/src/: GenericHelpers.cxx  LeptonHelpers.cxx  LoopSUSYFrame.cxx  LoopSUSYThTh.cxx  cppnn.cxx  main.cxx  readFFXML.cxx
root/tree/dataframe/test/: CTestTestfile.cmake  DataFrameSimpleDict.cxx  Makefile  NTupleStruct.pcm  RCsvDS_test_win.csv  TwoFloatsDict.cxx  cmake_install.cmake  dataframe_cache  dataframe_callbacks  dataframe_cloning  dataframe_colnames  dataframe_concurrency  dataframe_datasetspec  dataframe_definepersample  dataframe_display  dataframe_entrylist  dataframe_friends  dataframe_helpers  dataframe_histomodels  dataframe_interface  dataframe_leaves  dataframe_merge_results  dataframe_nodes  dataframe_ranges  dataframe_redefine  dataframe_regression  dataframe_report  dataframe_resptr  dataframe_samplecallback  dataframe_simple  dataframe_simple.pcm  dataframe_splitcoll_arrayview  dataframe_splitcoll_arrayview.pcm  dataframe_take  dataframe_utils  dataframe_vecops  datasource_csv  datasource_lazy  datasource_more  datasource_ntuple  (+4 more)
root/tree/dataframe/wmass/: CMakeLists.txt  LinkDef.h  README.md  runSignalAnalysis.py
root/tree/dataframe/wmass/RDFprocessor/: RDFtree.py  TH1weightsHelper.cpp  TH1weightsHelper.h  TH2weightsHelper.cpp  TH2weightsHelper.h  TH3weightsHelper.cpp  header.py  module.cpp  module.h  module.py  plotter.py
root/tree/dataframe/wmass/inc/: AngCoeff.hpp  TH3weightsHelper.hpp  classes.h  dataObs.hpp  defineHarmonics.hpp  defineSystWeight.hpp  getACValues.hpp  getAccMap.hpp  getWeights.hpp  templateBuilder.hpp
root/tree/dataframe/wmass/python/: basicSelection.py  getLumiWeight.py
root/tree/dataframe/wmass/src/: AngCoeff.cpp  TH1weightsHelper.cpp  TH2weightsHelper.cpp  TH3weightsHelper.cpp  dataObs.cpp  defineHarmonics.cpp  defineSystWeight.cpp  getACValues.cpp  getAccMap.cpp  getWeights.cpp  module.cpp  templateBuilder.cpp
rootbench-scripts/: README.md  flamegraph.sh  stackcollapse-perf.patch
tools/: CMakeLists.txt  download_files.sh  flamegraph.sh  upload2influxdb.py
travis-scripts/: before-install.sh  configure.sh  coveralls.sh  lcov-info-part1.sh  lcov-info-part2.sh  lcov-part1.sh  lcov-part2.sh  rootgcno.sh
(+2682 files in other folders)
